--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
+    "html5-qrcode": "^2.3.8",
     "ical-generator": "^8.0.0",
     "lucide-react": "^0.309.0",
     "next": "^15.0.0",
+    "openai": "^6.10.0",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^2.2.0",
+    "tesseract.js": "^6.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
