--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.39.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
@@ -42,6 +43,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
