--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-splash": "node scripts/generate-splash-screens.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -32,6 +33,7 @@
     "ical-generator": "^8.0.0",
     "lucide-react": "^0.309.0",
     "next": "^15.0.0",
+    "next-pwa": "^5.6.0",
     "openai": "^6.10.0",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
@@ -45,10 +47,11 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
     "@types/jspdf": "^1.3.3",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.19.26",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "canvas": "^3.2.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.0.0",
     "jspdf": "^3.0.4",
