--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.0.6",
     "html5-qrcode": "^2.3.8",
     "ical-generator": "^8.0.0",
